# OCVvid2fulldome

./: .travis.yml  CMakeLists.txt  OCVvid2fulldome.cpp  OCVvid2fulldomeWin32.vcxproj  OCVvid2fulldomeWin64.vcxproj  OCVvid2fulldomex64.vcxproj  OpenCVWin32.props  README.md  appveyor.yml  appveyor1.5.yml  appveyorOSX.yml  ocv430installforactions.sh  opencv430install.sh  x64Win10.vcxproj
.github/workflows/: cmake.yml  makewithfocalopencv.yml  msbuild.yml
appdir/: OCVvid2fulldome.desktop
octave/: vid2fulldome.m
